Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,22 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Palermo'"
+       "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(neighborhoods)"
+    "len(neighborhoods)\n",
+    "la_boca = neigh"
    ]
   },
   {
