--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighbr"
+    "la_boca_marker = neighborhood_markers"
    ]
   },
   {
